--- a/index.html
+++ b/index.html
@@ -1,51 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Tribute Website | A.P.J Abdul Kumar</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
- 
-<div class="container">
-
-    <div class="content">
-<section class="top_section">
-
-    <div class="image_container">
-        <img src="IMAGES/A._P._J._Abdul_Kalam.jpg" alt="tribute" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Job Application Form</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="apply_box">
+        <h1>
+          Job Application
+          <span class="title_small">(Web)</span>
+        </h1>
+        <form action="">
+          <div class="form_container">
+            <div class="form_control">
+              <label for="first_name"> First Name </label>
+              <input
+                id="first_name"
+                name="first_name"
+                placeholder="Enter First Name..."
+              />
+            </div>
+            <div class="form_control">
+              <label for="last_name"> Last Name </label>
+              <input
+                id="last_name"
+                name="last_name"
+                placeholder="Enter Last Name..."
+              />
+            </div>
+            <div class="form_control">
+              <label for="email"> Email </label>
+              <input
+                type="email"
+                id="email"
+                name="email"
+                placeholder="Enter Email..."
+              />
+            </div>
+            <div class="form_control">
+              <label for="job_role"> Job Role </label>
+              <select id="job_role" name="job_role">
+                <option value="">Select Job Role</option>
+                <option value="frontend">Frontend Developer</option>
+                <option value="backend">Backend Developer</option>
+                <option value="full_stack">Full Stack Developer</option>
+                <option value="ui_ux">UI UX Designer</option>
+              </select>
+            </div>
+            <div class="textarea_control">
+              <label for="address"> Address </label>
+              <textarea
+                id="address"
+                name="address"
+                row="4"
+                cols="50"
+                placeholder="Enter Address"
+              ></textarea>
+            </div>
+            <div class="form_control">
+              <label for="city"> City </label>
+              <input id="city" name="city" placeholder="Enter City Name..." />
+            </div>
+            <div class="form_control">
+              <label for="pincode"> Pincode </label>
+              <input
+                type="number"
+                id="pincode"
+                name="pincode"
+                placeholder="Enter Pincode Name..."
+              />
+            </div>
+            <div class="form_control">
+              <label for="date"> Date </label>
+              <input value="2022-01-10" type="date" id="date" name="date" />
+            </div>
+            <div class="form_control">
+              <label for="upload"> Upload Your CV </label>
+              <input type="file" id="upload" name="upload" />
+            </div>
+          </div>
+          <div class="button_container">
+            <button type="submit">Apply Now</button>
+          </div>
+        </form>
+      </div>
     </div>
-    <div>
-        <h1>A . P . J Abdul Kalam</h1>
-        <h4>1931 - 2015</h4>
-    </div>
-</section>
-<section class="about_section">
-    <h2>Missile man of india </h2>
-    <p><b>Abdul Kalam,  full name Avul Pakir Jainulabdeen Abdul Kalam</b>, (born October 15, 1931, Rameswaram, India—died July 27, 2015, Shillong), Indian scientist and politician who played a leading role in the development of India's missile and nuclear weapons programs.APJ Abdul Kalam is one of India's most celebrated scientists and was President of the Republic of India from 2002 to 2007. An aeronautical engineer by training, Dr. Kalam played a critical part in developing India's nuclear weapons program as well as establishing and leading India's space program.Avul Pakir Jainelabdeen Abdul Kalam was the 11th President of the country from 2002 and 2007 and is also popularly known as the 'Missile Man' of India.When Kalam was 5 years old, he had a teacher Muthu Iyer. He took a special interest in Kalam because he performed well in class. Iyer played a crucial role in nurturing good habits in Kalam.Kalam, one of the most distinguished scientists of India, has the unique honor of receiving honorary doctorates from 36 universities and institutions. Dr. Kalam has received the coveted civilian awards Padma Bhushan (1981) and Padma Vibhushan (1990), and the highest civilian honor Bharat Ratna (1997).Dr. APJ Abdul Kalam had always encouraged people to strive towards incorporating new values, ethics and learnings in their day-to-day lives. His contribution in the scientific development sector, and his devotion towards serving the nation, will forever be remembered by one and all.Dr. Kalam was then serving as a chief Scientific adviser to the then prime Minister, and he was the brain behind the multiple nuclear testing in Pokhran which left the whole world shocked. As the CEO of the DRDO from July 1992 to July 1999, he directed the Pokhran II explosions.Nandi, hovercraft developed by Abdul Kalam. Dr APJ Abdul Kalam first invention took to the power and drove great power to the administration. This was his foremost creation or innovation, a dual engine driven hovercraft dubbed Nandhi for his university assignment.He thus came to be known as the Missile Man of India for his work on the development of ballistic missile and launch vehicle technology. He also played a pivotal organisational, technical, and political role in India's Pokhran-II nuclear tests in 1998, the first since the original nuclear test by India in 1974.Why do you admire APJ Abdul Kalam?
-Kalams patriotism and his interests in the development of our country is very inspiring. His ambition to make india a superpower and to raise our country to the levels of the develped nations, is to be emulated. Dr. kalam is regarded as the peoples president.The missile man of India Dr. APJ Abdul Kalam is my role model. He is my role model not because he has achieved great things in life and become the president of India. He is my role model because he dedicated his entire life to the country and its people especially school children.My message, especially to young people is to have courage to think differently, courage to invent, to travel the unexplored path, courage to discover the impossible and to conquer the problems and succeed” he emphasized.Abdul Kalam message "I Will Fly" is a stimulating speech expecially to the youngsters. ... The message hightlights the fact that everyone is born with potential to do something great. We are given the faculties that give us confidence. We all possess inborn ideas to achieve dreams.Abdul Kalam had a dream to become a fighter pilot. However, fate had destined some other career for him. While he could not fulfil his dream of flying a fighter jet, he took up another dream, worked hard as a scientist and became the 'Missile Man of India.
-</p>
-</section>
-<section class="biography_section">
-    <h3>some famous quest </h3>
-    <ul>
-        <li> 1 “Fortune favors the bold.” – Virgil. ...
-             2  “I think, therefore I am.” – René Descartes. ..
-             3  “Time is money.” – ...
-             4   “I came, I saw, I conquered.” – ...
-             5   “When life gives you lemons, make lemonade.” – ...
-             6    Practice makes perfect.” – ...
-             7    “Knowledge is power.” – ...
-             8    “Have no fear of perfection, you'll never reach it.” –
-        </li>
-    </ul>
-</section>
-<footer><p>Read more about A.P.J Abdul Kalam on <a href="https://en.wikipedia.org/wiki/A._P._J._Abdul_Kalam">wikipedia</a></p>.
-</footer>
-    </div>
-</div>
+  </body>
 </html>
